--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>webpack-simple-boilerplate</title>
+  <title>Order summary</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <section class="order-summary">
-    Hi
+    <article class="order-summary__card-container">
+      <img src="assets/images/illustration-hero.svg" alt="Person dancing with their phone" class="order-summary__image" />
+      <h1 class="order-summary__title">Order summary</h1>
+      <p class="order-summary__description">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+      <div class="order-summary__plan-section">
+        <img src="assets/images/icon-music.svg" class="order-summary__plan-image">
+        <div class="order-summary__plan-info">
+          <h2 class="order-summary__plan-title">Annual Plan</h2>
+          <p class="order-summary__plan-price">$55.99/year</p>
+        </div>
+        <a class="order-summary__plan-link" aria-label="Change music plan selected" href="#">Change</a>
+      </div>
+      <div class="order-summary__actions">
+        <button class="order-summary__button--primary">Procceed to Payment</button>
+        <button class="order-summary__button">Cancel Order</button>
+      </div>
+    </article>
   </section>
   
 </body>
