Fixed accesibility issues

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <section class="order-summary">
+  <main class="order-summary">
     <article class="order-summary__card-container">
       <img src="assets/images/illustration-hero.svg" alt="Person dancing with their phone" class="order-summary__image" />
       <h1 class="order-summary__title">Order summary</h1>
       <p class="order-summary__description">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
       <div class="order-summary__plan-section">
-        <img src="assets/images/icon-music.svg" class="order-summary__plan-image">
+        <img src="assets/images/icon-music.svg" alt="Music icon" class="order-summary__plan-image">
         <div class="order-summary__plan-info">
           <h2 class="order-summary__plan-title">Annual Plan</h2>
           <p class="order-summary__plan-price">$55.99/year</p>
@@ -28,7 +28,10 @@
         <button class="order-summary__button">Cancel Order</button>
       </div>
     </article>
-  </section>
-  
+  </main>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/NicolasMontoya">Edward Montoya</a>.
+  </footer>
 </body>
 </html>
